# bmp_image_processor

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Filters/: filters.cpp  filters.h  make_filter.cpp  make_filter.h
Image/: image.h  read.cpp  write.cpp
Parser/: parse.cpp  parse.h
